# gz_cw_dynamics

./: .gitignore  CMakeLists.txt  README.md  package.xml
docs/: controla_readme_draft.md  seminar_setup.md  team1_formation_brief.md  team2_docking_brief.md
launch/: gco_test.launch.py  gco_test_noplugin.launch.py  gco_verify.launch.py  mission.launch.py  thruster_test.launch.py
scripts/: chief_propagator_node.py  run_all_sensors_test.sh  run_chief_test.sh  run_full_system_test.sh  run_gco_verify.sh  run_imu_test.sh  run_rw_test.sh  run_thruster_test.sh  test_all_sensors.py  test_chief.py  test_imu.py  test_reaction_wheel.py  test_thrusters.py  verify_gco.py
scripts/student/: camera_saver.py  rw_commander.py  sensor_monitor.py  thruster_commander.py
src/: CWDynamics.cc  ChiefPropagator.cc  Gps.cc  OrbitImu.cc  ReactionWheel.cc  StarTracker.cc  Thruster.cc
worlds/: gco_test.sdf  gco_test_noplugin.sdf  gco_verify.sdf  mission.sdf  thruster_test.sdf
