<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_cw_dynamics</name>
  <version>0.1.0</version>
  <description>
    gz-sim System plugin applying Clohessy-Wiltshire pseudo-forces to a link,
    so that a Gazebo world treated as an LVLH frame reproduces relative
    orbital motion about a chief satellite. Provides a Hill-frame world and
    test scenes (GCO, in-track) for SSA proximity operations seminars.
  </description>
  <maintainer email="dh.nam@controla.re.kr">ndh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>orbit_sim</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <build_depend>gz-cmake3</build_depend>
  <build_depend>gz-plugin2</build_depend>
  <build_depend>gz-sim8</build_depend>
  <build_depend>gz-math7</build_depend>
  <build_depend>gz-transport13</build_depend>
  <build_depend>gz-msgs10</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
